[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
leveldb = "0.8.6"
log = "0.4.17"
rpassword = "7.2.0"
rusqlite = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.28.1", features = ["full"] }